[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "async-lru>=2.2.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.9",
    "browser-use-sdk>=2.0.15",
    "cos-python-sdk-v5>=1.9.41",
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "filelock>=3.20.3",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "json-repair>=0.56.0",
    "logging>=0.4.9.6",
    "markdownify>=1.2.2",
    "mcp>=1.26.0",
    "openai>=2.15.0",
    "playwright>=1.58.0",
    "property>=2.6.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
